<resources>
    <string name="app_name">Relógio Xadrez</string>
    <string name="time">00M:00S:00MS</string>
    <string name="iniciar">Iniciar</string>
    <string name="tempos_um_campe_o">Tempos um campeão</string>
    <string name="mm">MM</string>
    <string name="hh">HH</string>
    <string name="quantidade_de_tempo">Quantidade de Tempo</string>
    <string name="preset">Preset</string>
    <string name="init">Init</string>
    <string name="restart">Restart</string>
    <string name="logo_rel_gio_chess">Logo Relógio Chess</string>
    <string name="seg">Seg</string>
    <string name="min">Min</string>
    <string name="adicional_por_lance_em_segundos">Adicional por lance em segundos</string>
    <string name="_0_segundos">0 segundos</string>
    <string name="melhor_de">Melhor de?</string>
    <string name="move">move</string>
    <string name="abandono">Abandono</string>
    <string name="jogador_azul">Jogador Azul</string>
    <string name="jogador_rosa">Jogador Rosa</string>
</resources>